<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<!-- <RelativeLayout -->
	<!-- android:layout_width="wrap_content" android:layout_height="wrap_content" -->
	<!-- android:background="#FFFFFF"> -->
	<!-- <SeekBar android:id="@+id/seek" android:layout_alignParentTop="true" -->
	<!-- android:layout_centerHorizontal="true" android:layout_height="wrap_content" -->
	<!-- android:layout_width="300dip" android:background="@drawable/background" -->
	<!-- android:padding="4dip" android:drawingCacheQuality="high" -->
	<!-- android:progressDrawable="@drawable/slider_on_off" -->
	<!-- android:progress="99" -->
	<!-- android:max="99" android:maxHeight="100dip" android:thumb="@drawable/slider_box" -->
	<!-- android:thumbOffset="0dip" /> -->
	<!-- </RelativeLayout> -->
	<ListView android:id="@+id/list" android:layout_width="wrap_content"
		android:layout_height="wrap_content"></ListView>
<TextView  android:id="@+id/fromservice"
		android:layout_width="wrap_content" android:layout_height="wrap_content" />

	<TextView android:text="@string/signal_strength" android:id="@+id/signalstr"
		android:layout_width="wrap_content" android:layout_height="wrap_content" />

	<TextView android:text="@string/cellid" android:id="@+id/TextView01"
		android:layout_width="wrap_content" android:layout_height="wrap_content" />

	<TextView android:text="@string/lac" android:id="@+id/TextView02"
		android:layout_width="wrap_content" android:layout_height="wrap_content" />

	<TextView android:text="@string/mcc" android:id="@+id/TextView03"
		android:layout_width="wrap_content" android:layout_height="wrap_content" />

	<TextView android:text="@string/mnc" android:id="@+id/TextView04"
		android:layout_width="wrap_content" android:layout_height="wrap_content" />
	<TextView android:id="@+id/TextView05"
		android:layout_width="wrap_content" android:layout_height="wrap_content" />

	<Button android:text="@string/updatecell" android:id="@+id/UpdateCellButton"
		android:layout_width="fill_parent" android:layout_height="wrap_content" />

	<TextView android:text="@string/lat" android:id="@+id/position_latitude"
		android:layout_width="wrap_content" android:layout_height="wrap_content" />

	<TextView android:text="@string/lon" android:id="@+id/position_longitude"
		android:layout_width="wrap_content" android:layout_height="wrap_content" />

	<TextView android:text="@string/name" android:id="@+id/position_name"
		android:layout_width="wrap_content" android:layout_height="wrap_content" />

	<TextView android:text="@string/accuracy" android:id="@+id/position_accuracy"
		android:layout_width="wrap_content" android:layout_height="wrap_content" />

	<Button android:text="@string/get_position" android:id="@+id/GetPositionButton"
		android:layout_width="fill_parent" android:layout_height="wrap_content" />
</LinearLayout>